<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_margin="10dp"
              android:layout_gravity="center"
    >

    <Button
        android:text="@string/fver"
        style="@style/channel_list_text_style"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        />
    <Button
        android:text="@string/rtfq"
        style="@style/channel_list_text_style"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        />
    <Button
        android:text="@string/rbnd"
        style="@style/channel_list_text_style"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        />
    <Button
        android:text="@string/rpas"
        style="@style/channel_list_text_style"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        />
    <Button
        android:text="@string/rgan"
        style="@style/channel_list_text_style"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        />
    <Button
        android:text="@string/rvgn"
        style="@style/channel_list_text_style"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        />
    <Button
        android:text="@string/rxmt"
        style="@style/channel_list_text_style"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        />
    <Button
        android:text="@string/srsi"
        style="@style/channel_list_text_style"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        />
    <Button
        android:text="@string/stfq"
        style="@style/channel_list_text_style"/>

    <Button
        android:text="@string/fver"
        style="@style/channel_list_text_style"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        />
    <Button
        android:text="@string/rtfq"
        style="@style/channel_list_text_style"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        />
    <Button
        android:text="@string/rbnd"
        style="@style/channel_list_text_style"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        />
    <Button
        android:text="@string/rpas"
        style="@style/channel_list_text_style"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        />
    <Button
        android:text="@string/rgan"
        style="@style/channel_list_text_style"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        />
    <Button
        android:text="@string/rvgn"
        style="@style/channel_list_text_style"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        />
    <Button
        android:text="@string/rxmt"
        style="@style/channel_list_text_style"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        />
    <Button
        android:text="@string/srsi"
        style="@style/channel_list_text_style"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        />
    <Button
        android:text="@string/stfq"
        style="@style/channel_list_text_style"/>
</LinearLayout>